2014-08-06  Myles C. Maxfield  <mmaxfield@apple.com>

        [iOS] Make document marker assets not specific to particular scale factors
        https://bugs.webkit.org/show_bug.cgi?id=135671

        Reviewed by Simon Fraser.

        No new tests.

        * WebCore.xcodeproj/project.pbxproj:
        * platform/ios/wak/WKGraphics.mm:
        (imageResourcePath):
        (WKGraphicsCreateImageFromBundleWithName):

2014-08-06  Enrica Casucci  <enrica@apple.com>

        Services menu doesn't show up after you defocus/refocus the Safari window.
        https://bugs.webkit.org/show_bug.cgi?id=135678
        <rdar://problem/17929247>

        Reviewed by Tim Horton.

        In setSelection we create a SelectionRectGatherer::Notifier object that will notify
        SelectionOverlayController about changes to the selection rects.
        Upon creation, the list of selections rects is cleared, since it is populated by
        the code that collects the selection rects. That code is never called
        when setSelection won't change the selection, which the case when the window is
        activated. The fix consists in postponing the SelectionRectGatherer::Notifier object
        creation until we know for sure that the selection is indeed going to change.
        
        * rendering/RenderView.cpp:
        (WebCore::RenderView::setSelection):

2014-08-06  Dean Jackson  <dino@apple.com>

        ENABLE_CSS_TRANSFORMS_ANIMATIONS_UNPREFIXED is not used anywhere. Remove it.
        https://bugs.webkit.org/show_bug.cgi?id=135675

        Reviewed by Sam Weinig.

        * Configurations/FeatureDefines.xcconfig:

2014-08-06  Brady Eidson  <beidson@apple.com>

        IDB transactions never reset if the Web Process ends before cleaning up
        https://bugs.webkit.org/show_bug.cgi?id=135218

        Reviewed by David Kilzer.

        No new tests (Covered by existing tests).

        * Modules/indexeddb/IDBServerConnection.h: Add sync versions of reset/rollback.
