@@ -48,9 +48,7 @@ namespace WebCore {
     bool isJapaneseEncoding(const char* canonicalEncodingName);
     bool shouldShowBackslashAsCurrencySymbolIn(const char* canonicalEncodingName);
 
-#if PLATFORM(COCOA)
     String defaultTextEncodingNameForSystemLanguage();
-#endif
 
 #ifndef NDEBUG
     void dumpTextEncodingNameMap();
